--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import "tailwindcss";
 @plugin "daisyui";
@@ -7,10 +6,6 @@
   name: "light";
   default: true;
   --color-primary: #3B82F6;
-  --color-secondary: #5608cd;
+  --color-secondary: #cbb1f1;
 }
 
-
-.font{
-    font-family: "Alumni Sans SC", sans-serif;
-}
