added theme toogle and menu

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-@plugin "daisyui/theme" {
-  default: true;
-  --color-primary: #3B82F6;
-  --color-secondary: #88CBF2;
+@layer components {
+  html[data-theme="light"] {
+    --color-primary: #3B82F6;
+    --color-secondary: #88CBF2;
+  }
+  html[data-theme="dark"] {
+    --color-primary: #3B82F6;
+    --color-secondary: #88CBF2;
+  }
 }
 
 .active{
